# easy-rust-project-for-beginner

./: README.md
.github/workflows/: rust.yml
async+await/async_await/: Cargo.toml
async+await/async_await/src/: main.rs
easy-compression-rust/compression/: Cargo.toml  compressed_file
easy-compression-rust/compression/src/: main.rs
easy-compression-rust/decompression_GzEncoder/: Cargo.toml  uncompressed_file
easy-compression-rust/decompression_GzEncoder/src/: main.rs
easy-decompression-rust/decompression/: Cargo.toml
easy-decompression-rust/decompression/src/: main.rs
get_request/get_request/: Cargo.toml
get_request/get_request/src/: main.rs
make_api_call/make_api_call/: Cargo.toml
make_api_call/make_api_call/src/: main.rs
read-csv-rust/read-csv-file/: Cargo.toml  SampleCSVFile_556kb.csv
read-csv-rust/read-csv-file/src/: main.rs
read-json-rust/read-json/: Cargo.toml
read-json-rust/read-json/src/: main.rs
write-json-rust/write-json/: Cargo.toml
write-json-rust/write-json/src/: main.rs
